# uni-alc

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  main.py  setup.sh
include/: parse.hpp
proj1/: main.py  main2.py
proj1/report/: main.tex
proj1/report/sections/: section1.tex  section2.tex  section3.tex  section4.tex
proj1/tests/: 1.out
proj2/: main.py  main2.py  main3.py  toposort.py
proj2/report/: .gitattributes  .gitignore  main.tex
proj2/report/sections/: section1.tex  section2.tex  section3.tex  section4.tex
proj2/tests/: 1.apr  2.apr  2.out
src/: CMakeLists.txt  main.cpp
